--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -701,6 +701,55 @@ a {
   padding: 1rem;
   gap: 1rem;
 }
+.list-container .tooltip {
+  font-size: 80%;
+  font-weight: 500;
+}
+.list-container .sorting-and-grouping {
+  flex-direction: column;
+  gap: 0.25rem;
+  width: 100%;
+}
+.list-container .sorting-and-grouping #hard-filters-container {
+  padding: 0.25rem;
+  border-radius: 3px;
+  border: 1px solid #4d4d4d;
+}
+.list-container .sorting-and-grouping .section {
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+  flex-wrap: wrap;
+}
+.list-container .sorting-and-grouping .section h4 {
+  margin: 0;
+  font-size: 70%;
+}
+.list-container .sorting-and-grouping .section .search-container {
+  flex-direction: row;
+  width: 100%;
+  padding: 3px;
+  border-radius: 3px;
+  gap: 5px;
+  border: 1px solid #4d4d4d;
+}
+.list-container .sorting-and-grouping .section .search-container .img-container {
+  width: 20px;
+  aspect-ratio: 1/1;
+  height: 20px;
+}
+.list-container .sorting-and-grouping .section .search-container .img-container img {
+  width: 100%;
+  height: 100%;
+}
+.list-container .sorting-and-grouping .section .search-container .search-input {
+  border: none;
+  outline: transparent;
+  width: 100%;
+  padding-left: 10px;
+  border-left: 1px solid #4d4d4d;
+}
 .list-container .list {
   font-size: 80%;
   border-inline: 1px solid #6e70e4;
@@ -715,10 +764,24 @@ a {
   background-color: #6e70e4;
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
+  padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
 .list-container .list #label-section .record-label {
   color: white !important;
+  flex-direction: row;
+  justify-content: space-between;
+  cursor: pointer;
+}
+.list-container .list #label-section .record-label:hover {
+  background-color: #999aec;
+}
+.list-container .list #label-section .record-label:hover::after {
+  content: "";
+  background-image: url("/assets/icons/filter-sort.png");
+  background-size: cover;
+  width: 15px;
+  height: 15px;
 }
 .list-container .list .record-section:nth-child(even) {
   background-color: #aeb0f0;
@@ -736,4 +799,7 @@ a {
 }
 .list-container .list .record-section .record-input:active, .list-container .list .record-section .record-input:focus {
   outline: 1px solid #6e70e4;
+}
+.list-container .list .list-section .record-label {
+  color: #292524 !important;
 }/*# sourceMappingURL=main.css.map */
