--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -186,8 +186,12 @@ a {
   font-size: 130%;
   font-weight: 500;
 }
-.navbar .section .subsection .nav-button {
+.navbar .section .subsection #nav-menu-button {
   border: 1px solid rgb(63, 63, 218);
+}
+.navbar .section .subsection #nav-menu-button:hover {
+  background-color: rgb(63, 63, 218);
+  color: white;
 }
 .navbar .section .subsection .nav-button, .navbar .section .subsection .nav-button-secondary {
   flex-direction: column;
